@@ -81,7 +81,7 @@ AM_SILENT_RULES([yes])
 PURPLE_MAJOR_VERSION=purple_major_version
 PURPLE_MINOR_VERSION=purple_minor_version
 PURPLE_MICRO_VERSION=purple_micro_version
-PURPLE_VERSION=[purple_display_version]
+PURPLE_VERSION=purple_display_version
 AC_SUBST(PURPLE_MAJOR_VERSION)
 AC_SUBST(PURPLE_MINOR_VERSION)
 AC_SUBST(PURPLE_MICRO_VERSION)
@@ -93,7 +93,7 @@ AC_SUBST(PURPLE_LT_VERSION_INFO)
 GNT_MAJOR_VERSION=gnt_major_version
 GNT_MINOR_VERSION=gnt_minor_version
 GNT_MICRO_VERSION=gnt_micro_version
-GNT_VERSION=[gnt_display_version]
+GNT_VERSION=gnt_display_version
 AC_SUBST(GNT_MAJOR_VERSION)
 AC_SUBST(GNT_MINOR_VERSION)
 AC_SUBST(GNT_MICRO_VERSION)
@@ -2520,6 +2520,13 @@ AC_ARG_ENABLE(trayicon-compat, AS_HELP_STRING([--enable-trayicon-compat], [insta
 
 AM_CONDITIONAL(ENABLE_TRAYCOMPAT, test "x$enable_traycompat" = "xyes")
 
+# check for gtk-doc
+m4_ifdef([GTK_DOC_CHECK], [
+GTK_DOC_CHECK([1.14],[--flavour no-tmpl])
+],[
+AM_CONDITIONAL([ENABLE_GTK_DOC], false)
+])
+
 AC_ARG_ENABLE(debug, [AS_HELP_STRING([--enable-debug],
 	[compile with debugging support])], , enable_debug=no)
 
@@ -2533,6 +2540,13 @@ AC_CONFIG_FILES([Makefile
 		   doc/Makefile
 		   doc/pidgin.1
 		   doc/finch.1
+		   doc/reference/Makefile
+		   doc/reference/finch/Makefile
+		   doc/reference/finch/version.xml
+		   doc/reference/libpurple/Makefile
+		   doc/reference/libpurple/version.xml
+		   doc/reference/pidgin/Makefile
+		   doc/reference/pidgin/version.xml
 		   m4macros/Makefile
 		   pidgin.apspec
 		   pidgin/Makefile
@@ -2641,6 +2655,7 @@ echo Build with plugin support..... : $enable_plugins
 echo Enable Introspection...........: $enable_introspection
 echo
 echo Print debugging messages...... : $enable_debug
+echo Generate documentation........ : $enable_gtk_doc
 echo
 eval eval echo Pidgin will be installed in $bindir.
 if test "x$pidginpath" != "x" ; then
